Fixed: spacing issues on home7

--- a/src/sass/grid-layout.scss
+++ b/src/sass/grid-layout.scss
@@ -172,10 +172,10 @@ $wnd-lg: 1230px;
         padding-bottom: 4em !important;
     }
     &.less-bottom-pad {
-        padding-bottom: 2.5em !important;
+        padding-bottom: 1.5em !important;
     }
     &.very-less-bottom-pad {
-        padding-bottom: 1.5em !important;
+        padding-bottom: 1em !important;
     }
     // Grid Types
     display: grid;
@@ -255,6 +255,11 @@ $wnd-lg: 1230px;
     }
     .left-edge {
         justify-self: end;
+    }
+
+    &.no-pad {
+        padding-top: 0;
+        padding-bottom: 0;
     }
 }
 
